git commit -m "feat: update backend + frontend together"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "next_nest_todo",
     "private": true,
+    "workspaces": [
+        "backend",
+        "frontend"
+    ],
     "scripts": {
         "dev:backend": "npm --prefix backend run start:dev",
         "dev:frontend": "npm --prefix frontend run dev",
